name:                test
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jerry Lin
maintainer:          rjhala@eng.ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable test-exe
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       parsec,
                       mtl,
                       aeson,
                       bytestring,
                       cryptohash,
                       split,
                       crypto-cipher-types,
                       vty, 
                       brick,
                       directory,
                       transformers,
                       cursor,
                       cursor-brick,
                       lens,
                       text,
                       terminal-size
  hs-source-dirs:      src
  other-modules:       Test
                      --  ,Password
  
  default-language:    Haskell2010
  ghc-options:       -W -threaded

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -threaded
  main-is:           Test.hs
  build-depends:     base >=4.9, process